Fix - Gutenberg alignwide CSS

--- a/style.css
+++ b/style.css
@@ -2191,13 +2191,6 @@ a#scroll-up:hover {
 	width: unset;
 }
 
-.no_sidebar_full_width.boxed #primary .entry-content > .alignwide,
-.no_sidebar_content_centered.boxed #primary .entry-content > .alignwide {
-	margin-left: -15px;
-	margin-right: -15px;
-	max-width: unset;
-}
-
 /* =BOTH SIDEBAR LAYOUT
 -------------------------------------------------------------- */
 .both_sidebar .content-primary-sidebar {
@@ -2673,27 +2666,17 @@ iframe#wp-custom-header-video {
 /* =RESPONSIVE STRUCTURE
 ----------------------------------------------- */
 @media screen and (max-width: 1500px) {
-	.no_sidebar_full_width #primary .entry-content > .alignwide {
-		margin-left: -50px;
-		margin-right: -50px;
-	}
+	.no_sidebar_full_width #primary .entry-content > .alignwide,
 	.no_sidebar_content_centered #primary .entry-content > .alignwide {
 		margin-left: -50px;
 		margin-right: -50px;
 	}
 }
+
 @media screen and (max-width: 1400px) and (min-width: 1200px) {
-	.no_sidebar_full_width.boxed #primary .entry-content > .alignwide {
-	   margin-left: -15px;
-	   margin-right: -15px;
-	}
-	.no_sidebar_content_centered.boxed #primary .entry-content > .alignwide {
+	.no_sidebar_content_centered.boxed #primary .entry-content > .alignfull {
 	   margin-left: -30px;
 	   margin-right: -30px;
-	}
-	.no_sidebar_content_centered.boxed #primary .entry-content > .alignfull {
-	   margin-left: -100px;
-	   margin-right: -100px;
 	}
  }
 
